bin_PROGRAMS = dtu-caesarcipher

dtu_caesarcipher_SOURCES =  \
	dtu-caesarcipher-app.c \
	dtu-caesarcipher-app.h \
	dtu-caesarcipher-app-win.c \
	dtu-caesarcipher-app-win.h \
	main.c
dtu_caesarcipher_CFLAGS = $(DTU_CAESARCIPHER_CFLAGS)

dtu_caesarcipher_LDADD = $(DTU_CAESARCIPHER_LIBS)

-include $(top_srcdir)/git.mk
